latest updates to airbnb, lending club, and pyspark demos

--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -48,70 +48,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For now, we've made it so that you have to download the [data](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro.zip) from s3. We suggest that you place it in your /tmp directory."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once [TOREE-345](https://issues.apache.org/jira/browse/TOREE-345) is fixed, we won't have to deal with complicated notebook setup and will just be able to include:\n",
-    "\n",
-    "```scala\n",
-    "%AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0 --transitive\n",
-    "```\n",
-    "\n",
-    "For now, make sure to clone [mleap](https://github.com/combust-ml/mleap) and run:\n",
-    "\n",
-    "```bash\n",
-    "sbt \"+ publishLocal\"\n",
-    "sbt publishM2\n",
-    "```"
+    "For now, we've made it so that you have to download the [data](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/lending_club.avro) from s3. We suggest that you place it in your /tmp directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Marking ml.combust.mleap:mleap-spark_2.11:0.3.0-SNAPSHOT for download\n",
-      "Preparing to fetch from:\n",
-      "-> file:/var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/\n",
-      "-> file:/Users/mikhail/.m2/repository\n",
-      "-> https://repo1.maven.org/maven2\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/lihaoyi/sourcecode_2.11/0.1.1/sourcecode_2.11-0.1.1.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/io/spray/spray-json_2.11/1.3.2/spray-json_2.11-1.3.2.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/lihaoyi/fastparse-utils_2.11/0.3.7/fastparse-utils_2.11-0.3.7.jar\n",
-      "-> New file at /Users/mikhail/.m2/repository/ml/combust/mleap/mleap-runtime_2.11/0.3.0-SNAPSHOT/mleap-runtime_2.11-0.3.0-SNAPSHOT.jar\n",
-      "-> New file at /Users/mikhail/.m2/repository/ml/combust/mleap/mleap-spark_2.11/0.3.0-SNAPSHOT/mleap-spark_2.11-0.3.0-SNAPSHOT.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/google/protobuf/protobuf-java/3.0.0/protobuf-java-3.0.0.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/trueaccord/lenses/lenses_2.11/0.4.6/lenses_2.11-0.4.6.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/lihaoyi/fastparse_2.11/0.3.7/fastparse_2.11-0.3.7.jar\n",
-      "-> New file at /Users/mikhail/.m2/repository/ml/combust/mleap/mleap-core_2.11/0.3.0-SNAPSHOT/mleap-core_2.11-0.3.0-SNAPSHOT.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/jsuereth/scala-arm_2.11/2.0-RC1/scala-arm_2.11-2.0-RC1.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/typesafe/config/1.3.0/config-1.3.0.jar\n",
-      "-> New file at /Users/mikhail/.m2/repository/ml/combust/bundle/bundle-ml_2.11/0.3.0-SNAPSHOT/bundle-ml_2.11-0.3.0-SNAPSHOT.jar\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/trueaccord/scalapb/scalapb-runtime_2.11/0.5.42/scalapb-runtime_2.11-0.5.42.jar\n",
-      "Marking com.databricks:spark-avro_2.11:3.0.1 for download\n",
-      "Preparing to fetch from:\n",
-      "-> file:/var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/\n",
-      "-> https://repo1.maven.org/maven2\n",
-      "-> New file at /var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/toree_add_deps2959412719271534823/https/repo1.maven.org/maven2/com/databricks/spark-avro_2.11/3.0.1/spark-avro_2.11-3.0.1.jar\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0-SNAPSHOT --transitive --repository file:///Users/mikhail/.m2/repository\n",
-    "%AddDeps com.databricks spark-avro_2.11 3.0.1\n",
+    "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0-SNAPSHOT --transitive --repository file:///Users/mikhail/.m2/repository\n",
+    "// %AddDeps com.databricks spark-avro_2.11 3.0.1\n",
     "\n",
     "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
-    "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
+    "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler, PolynomialExpansion}\n",
     "import org.apache.spark.ml.classification.{RandomForestClassifier, LogisticRegression}\n",
     "import org.apache.spark.ml.{Pipeline, PipelineStage}"
    ]
@@ -125,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cap DTI"
+    "### Cap DTI and Keep Select Categories"
    ]
   },
   {
@@ -196,13 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "755473\n",
+      "754604\n"
+     ]
+    }
+   ],
    "source": [
     "dataset.registerTempTable(\"df\")\n",
+    "println(dataset.count())\n",
     "\n",
     "val datasetFnl = spark.sqlContext.sql(f\"\"\"\n",
     "    select\n",
@@ -213,11 +175,19 @@
     "            else dti\n",
     "        end as dti,\n",
     "        emp_length,\n",
-    "        state,\n",
+    "        case when state in ('CA', 'NY', 'MN', 'IL', 'FL', 'WA', 'MA', 'TX', 'GA', 'OH', 'NJ', 'VA', 'MI')\n",
+    "            then state\n",
+    "            else 'Other'\n",
+    "        end as state,\n",
     "        loan_title,\n",
     "        approved\n",
     "    from df\n",
-    "\"\"\")"
+    "    where loan_title in('Debt Consolidation', 'Other', 'Home/Home Improvement', 'Payoff Credit Card', 'Car Payment/Loan',\n",
+    "    'Business Loan', 'Health/Medical', 'Moving', 'Wedding/Engagement', 'Vacation', 'College', 'Renewable Energy', 'Payoff Bills',\n",
+    "    'Personal Loan', 'Motorcycle')\n",
+    "\"\"\")\n",
+    "\n",
+    "println(datasetFnl.count())"
    ]
   },
   {
@@ -229,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -358,16 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "754604\n"
+     ]
+    }
+   ],
    "source": [
     "// Filter all null values\n",
-    "val allCols = allFeatures.union(Seq(\"approved\")).map(datasetImputed.col)\n",
+    "val allCols = allFeatures.union(Seq(\"approved\")).map(datasetFnl.col)\n",
     "val nullFilter = allCols.map(_.isNotNull).reduce(_ && _)\n",
-    "val datasetImputedFiltered = datasetImputed.select(allCols: _*).filter(nullFilter).persist()\n",
+    "val datasetImputedFiltered = datasetFnl.select(allCols: _*).filter(nullFilter).persist()\n",
     "\n",
     "println(datasetImputedFiltered.count())"
    ]
@@ -381,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -399,9 +377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -413,9 +391,13 @@
     "    setInputCol(\"unscaled_continuous_features\").\n",
     "    setOutputCol(\"scaled_continuous_features\")\n",
     "\n",
-    "val ContinuousFeaturePolynomialExpansion = new PolynomialExpansion(uid = \"polynomial_expansion_loan_amount\").\n",
-    "    setInputCols(\"loan_amount\").\n",
-    "    setOutputCol(\"loan_amount_polynomial_expansion\")"
+    "val polyExpansionAssembler = new VectorAssembler(uid = \"poly_expansion_feature_assembler\").\n",
+    "    setInputCols(Array(\"loan_amount\", \"dti\")).\n",
+    "    setOutputCol(\"poly_expansions_features\")\n",
+    "\n",
+    "val continuousFeaturePolynomialExpansion = new PolynomialExpansion(uid = \"polynomial_expansion_loan_amount\").\n",
+    "    setInputCol(\"poly_expansions_features\").\n",
+    "    setOutputCol(\"loan_amount_polynomial_expansion_features\")"
    ]
   },
   {
@@ -427,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -455,13 +437,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished constructing the pipeline\n"
+     ]
+    }
+   ],
    "source": [
-    "val featureColsRf = categoricalFeatureIndexers.map(_.getOutputCol).union(Seq(\"scaled_continuous_features\", \"loan_amount_polynomial_expansion\"))\n",
+    "val featureColsRf = categoricalFeatureIndexers.map(_.getOutputCol).union(Seq(\"scaled_continuous_features\", \"loan_amount_polynomial_expansion_features\"))\n",
     "val featureColsLr = categoricalFeatureOneHotEncoders.map(_.getOutputCol).union(Seq(\"scaled_continuous_features\"))\n",
     "\n",
     "// assemble all processes categorical and continuous features into a single feature vector\n",
@@ -473,7 +463,7 @@
     "    setInputCols(featureColsRf).\n",
     "    setOutputCol(\"features_rf\")\n",
     "\n",
-    "val estimators: Array[PipelineStage] = Array(continuousFeatureAssembler, continuousFeatureScaler).\n",
+    "val estimators: Array[PipelineStage] = Array(continuousFeatureAssembler, continuousFeatureScaler, polyExpansionAssembler, continuousFeaturePolynomialExpansion).\n",
     "    union(categoricalFeatureIndexers).\n",
     "    union(categoricalFeatureOneHotEncoders).\n",
     "    union(Seq(featureAssemblerLr, featureAssemblerRf))\n",
@@ -494,11 +484,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete: Training Random Forest\n"
+     ]
+    }
+   ],
    "source": [
     "// Step 3.1 Create our random forest model\n",
     "val randomForest = new RandomForestClassifier(uid = \"random_forest_classifier\").\n",
@@ -521,11 +519,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete: Training Logistic Regression\n"
+     ]
+    }
+   ],
    "source": [
     "val logisticRegression = new LogisticRegression(uid = \"logistic_regression\").\n",
     "    setFeaturesCol(\"features_lr\").\n",
