--- a/notebooks/PySpark - AirBnb.ipynb
+++ b/notebooks/PySpark - AirBnb.ipynb
@@ -1,6 +1,50 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MLeap.deploy() Demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To set-up running Spark 2.0 (required for this demo) from a Jupyter notebook, follow these [instructions](https://github.com/combust-ml/mleap/wiki/Setting-up-a-Spark-2.0-notebook-with-MLeap-and-Toree).\n",
+    "\n",
+    "This demo will show you how to:\n",
+    "1. Load the research dataset from s3\n",
+    "2. Construct a feature transformer pipeline using commonly available transformers in Spark\n",
+    "3. Deploy your model to a public model server hosted on the combust.ml cloud using .deploy()\n",
+    "\n",
+    "NOTE: To run the actual deploy step you have to either:\n",
+    "1. Get a key from combust.ml - it's easy, just email us!\n",
+    "2. Fire up the combust cloud server on your local machine - also easy, send us an email and we'll send you a docker image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background on the Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset used for the demo was pulled together from individual cities' data found [here](http://insideairbnb.com/get-the-data.html). We've also gone ahead and pulled the individual datasets and relevant features into this [research dataset](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro.zip) stored as avro."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 0: Load libraries and data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -12,21 +56,9 @@
     "from pyspark.ml.linalg import Vectors\n",
     "from pyspark.ml.feature import VectorAssembler, StandardScaler, StringIndexer\n",
     "from pyspark.ml.mleap.feature import OneHotEncoder\n",
-    "from mleap.spark.spark_support import PythonSerializer\n",
+    "from mleap.spark.spark_support import SimpleSparkSerializer\n",
     "from pyspark.ml import Pipeline, PipelineModel\n",
     "from pyspark.ml.regression import LinearRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.ml.base import Transformer\n",
-    "import mleap.spark.spark_support"
    ]
   },
   {
@@ -35,71 +67,14 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PipelineModel_4940b73e72048a730973"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ps = PythonSerializer()\n",
-    "res = ps.deserializeFromBundle(\"/tmp/pyspark.lr\")\n",
-    "res"
+    "df = spark.read.format(\"com.databricks.spark.avro\").load(\"/tmp/airbnb.avro\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "new_tf = PipelineModel.deserializeFromBundle(\"/tmp/pyspark.lr\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PipelineModel_4940b73e72048a730973"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df = spark.read.format(\"com.databricks.spark.avro\").load(\"/tmp/airbnb.avro\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -120,8 +95,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1: Standardize the data for our demo "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -195,6 +177,13 @@
     "\n",
     "\n",
     "datasetImputed.select(\"square_feet\", \"price\", \"bedrooms\", \"bathrooms\", \"cleaning_fee\").describe().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1.1: Take a look at some summary statistics of the data\n"
    ]
   },
   {
@@ -308,8 +297,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2: Define continous and categorical features\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -335,8 +331,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Split data into training and validation "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -346,8 +349,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Continous Feature Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -360,8 +370,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5: Categorical Feature Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -373,8 +390,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 6: Assemble our features and feature pipeline\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we have slightly different feature pipelines for LR and RF. This is done purely for demonstration purposes, whereas your actual models should scale continuous features for the RF model as well."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -405,30 +436,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[id: string, city: string, state: string, space: string, price: double, bathrooms: double, bedrooms: double, room_type: string, host_is_superhost: double, cancellation_policy: string, security_deposit: double, price_per_bedroom: double, number_of_reviews: decimal(11,1), extra_people: double, instant_bookable: double, cleaning_fee: double, review_scores_rating: double, square_feet: double, unscaled_continuous_features: vector, scaled_continuous_features: vector, room_type_index: double, host_is_superhost_index: double, cancellation_policy_index: double, instant_bookable_index: double, state_index: double, oh_encoder_room_type_index: vector, oh_encoder_host_is_superhost_index: vector, oh_encoder_cancellation_policy_index: vector, oh_encoder_instant_bookable_index: vector, oh_encoder_state_index: vector]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "sparkFeaturePipelineModel.transform(dataset_imputed)"
+    "### Step 7: Train a Linear Regression Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -458,8 +476,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 8: Serialize the model to Bundle.ML"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -469,46 +494,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 9 (Optional): Deserialize from Bundle.ML"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
-       "Message: Traceback (most recent call last):\n",
-       "  File \"/var/folders/b2/swftcs0s4bvfpqfvn3rm0pzw0000gn/T/kernel-PySpark-72089548-3a6b-4381-a0e3-9c13e364f1ab/pyspark_runner.py\", line 180, in <module>\n",
-       "    eval(compiled_code)\n",
-       "  File \"<string>\", line 1, in <module>\n",
-       "TypeError: deserializeFromBundle() takes exactly 1 argument (2 given)\n",
-       "\n",
-       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:158)\n",
-       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:158)\n",
-       "scala.Option.foreach(Option.scala:257)\n",
-       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:157)\n",
-       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
-       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-       "java.lang.reflect.Method.invoke(Method.java:498)\n",
-       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:237)\n",
-       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
-       "py4j.Gateway.invoke(Gateway.java:280)\n",
-       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:128)\n",
-       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-       "py4j.GatewayConnection.run(GatewayConnection.java:211)\n",
-       "java.lang.Thread.run(Thread.java:745)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_tf = PipelineModel.deserializeFromBundle(\"/tmp/pyspark.lr\")"
+    "sparkPipelineLr = PipelineModel.deserializeFromBundle(\"/tmp/pyspark.lr\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 10: Deploy to ModelServer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python bindings for .deploy() are coming soon. For now, you may have to write a few lines of scala - demo for that can be found [here](https://github.com/combust-ml/mleap-demo/blob/master/lending-club/notebooks/airbnb-price-regression.ipynb)."
    ]
   }
  ],
