--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -62,10 +62,24 @@
     "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0-SNAPSHOT --transitive --repository file:///Users/mikhail/.m2/repository\n",
     "// %AddDeps com.databricks spark-avro_2.11 3.0.1\n",
     "\n",
+    "// Spark Training Pipeline Libraries\n",
     "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler, PolynomialExpansion}\n",
     "import org.apache.spark.ml.classification.{RandomForestClassifier, LogisticRegression}\n",
-    "import org.apache.spark.ml.{Pipeline, PipelineStage}"
+    "import org.apache.spark.ml.{Pipeline, PipelineStage}\n",
+    "\n",
+    "// MLeap/Bundle.ML Serialization Libraries\n",
+    "import ml.combust.mleap.spark.SparkSupport._\n",
+    "import resource._\n",
+    "import ml.combust.bundle.BundleFile\n",
+    "import org.apache.spark.ml.bundle.SparkBundleContext\n",
+    "\n",
+    "// Combust libraries to deploy model to combust cloud (optional)\n",
+    "import ml.combust.model.client.spark.SparkSupport._\n",
+    "import akka.actor.ActorSystem\n",
+    "import akka.stream.ActorMaterializer\n",
+    "import scala.concurrent.duration._\n",
+    "import scala.concurrent.Await"
    ]
   },
   {
@@ -77,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -328,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -409,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -437,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -548,97 +562,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 9: Load the libaries for .deploy()"
+    "### Step 9: Set up the ActorSystem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import ml.combust.bundle.BundleRegistry\n",
-    "import ml.combust.mleap.spark.SparkSupport._\n",
-    "import ml.combust.client.spark.SparkSupport._\n",
-    "import ml.combust.client.model.MultiModelClient\n",
-    "import akka.actor.ActorSystem\n",
-    "import akka.stream.ActorMaterializer\n",
-    "import scala.concurrent.duration._\n",
-    "import scala.concurrent.Await\n",
-    "\n",
-    "implicit val hr = BundleRegistry(\"spark\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 10: Set up the ActorSystem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "implicit val system = ActorSystem(\"combust-client\")\n",
-    "implicit val materializer = ActorMaterializer()\n",
-    "implicit val ec = system.dispatcher"
+    "implicit val materializer = ActorMaterializer()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 11: Define model servers to send your models to"
+    "### Step 10: Deploy your LR and RF pipelines to the model servers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LoadModelResponse(ResourceAlias(ResourceKey(my_username,lc_model_rf,models),Some(Resource(88d169f9-3971-44ae-8f11-f343becfedda,models))))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "val client = MultiModelClient.builder[String]().\n",
-    "  withServer(\"model-server-1\", \"http://combust-model-server-4671c502.124d9c7a.svc.dockerapp.io:8889\").\n",
-    "  withServer(\"model-server-2\", \"http://combust-model-server-9ac83b2d.801b9d51.svc.dockerapp.io:8890\").\n",
-    "  build()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 12: Deploy your LR and RF pipelines to the model servers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Await.result(client.deploy(sparkPipelineLr, \"airbnb_lr\").sequence, 10.seconds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Await.result(client.deploy(sparkPipelineRf, \"airbnb_rf\").sequence, 10.seconds)"
+    "\n",
+    "// {\n",
+    "//     implicit val context = sbc\n",
+    "//     Await.result(sparkPipelineLr.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"lc_model_lr\", token), 10.seconds)\n",
+    "// }\n",
+    "// {\n",
+    "//     implicit val context = sbcRf\n",
+    "//     Await.result(sparkPipelineRf.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"lc_model_rf\", token), 10.seconds)\n",
+    "// }\n",
+    "\n",
+    "\n",
+    "{\n",
+    "    implicit val context = sbc\n",
+    "    Await.result(sparkPipelineLr.deploy(\"http://localhost:65327\", \"my_username\", \"lc_model_lr\"), 10.seconds)\n",
+    "}\n",
+    "{\n",
+    "    implicit val context = sbcRf\n",
+    "    Await.result(sparkPipelineRf.deploy(\"http://localhost:65327\", \"my_username\", \"lc_model_rf\"), 10.seconds)\n",
+    "}\n"
    ]
   },
   {
@@ -650,53 +633,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sparkPipelineLr.serializeToBundle(new java.io.File(\"/tmp/model.lr\"))\n",
-    "sparkPipelineRf.serializeToBundle(new java.io.File(\"/tmp/model.rf\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 14 (Optional): Undeploy your models from the model server"
+    "val sbc = SparkBundleContext().withDataset(sparkPipelineLr.transform(datasetImputedFiltered))\n",
+    "for(bf <- managed(BundleFile(\"jar:file:/tmp/lc.model.lr.zip\"))) {\n",
+    "        sparkPipelineLr.writeBundle.save(bf)(sbc).get\n",
+    "      }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "Await.result(client.undeploy(\"airbnb_rf\").sequence, 10.seconds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Await.result(client.undeploy(\"airbnb_lr\").sequence, 10.seconds)"
+    "val sbcRf = SparkBundleContext().withDataset(sparkPipelineRf.transform(datasetImputedFiltered))\n",
+    "for(bf <- managed(BundleFile(\"jar:file:/tmp/lc.model.rf.zip\"))) {\n",
+    "        sparkPipelineRf.writeBundle.save(bf)(sbcRf).get\n",
+    "      }\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - Scala",
+   "display_name": "Apache Toree - Scala2",
    "language": "scala",
    "name": "apache_toree_scala"
   },
   "language_info": {
+   "file_extension": ".scala",
    "name": "scala",
    "version": "2.11.8"
   }
