update to the airbnb demo to support mleap 0.5.0 release

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -62,11 +62,32 @@
     "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.4.0 --transitive\n",
     "// %AddDeps com.databricks spark-avro_2.11 3.0.1\n",
     "\n",
+    "// Register the Tensor UDT with Spark\n",
+    "org.apache.spark.sql.mleap.TensorUDT\n",
     "\n",
-    "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
+    "// Import the rest of the required packages\n",
+    "import org.apache.spark.ml.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
     "import org.apache.spark.ml.regression.{RandomForestRegressor, LinearRegression}\n",
-    "import org.apache.spark.ml.{Pipeline, PipelineStage}"
+    "import org.apache.spark.ml.{Pipeline, PipelineStage}\n",
+    "\n",
+    "// MLeap/Bundle.ML Serialization Libraries\n",
+    "import ml.combust.mleap.spark.SparkSupport._\n",
+    "import resource._\n",
+    "import ml.combust.bundle.BundleFile\n",
+    "import org.apache.spark.ml.bundle.SparkBundleContext\n",
+    "\n",
+    "// MLeap/Bundle.ML De-Serialization Libraries\n",
+    "import ml.combust.mleap.runtime.MleapContext.defaultContext\n",
+    "import ml.combust.mleap.runtime.MleapSupport._\n",
+    "import java.io.File\n",
+    "\n",
+    "// Libraries to deploy models to combust cloud (optional)\n",
+    "import ml.combust.model.client.spark.SparkSupport._\n",
+    "import akka.actor.ActorSystem\n",
+    "import akka.stream.ActorMaterializer\n",
+    "import scala.concurrent.duration._\n",
+    "import scala.concurrent.Await"
    ]
   },
   {
@@ -570,25 +591,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import ml.combust.mleap.spark.SparkSupport._"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sparkPipelineLr.serializeToBundle(new java.io.File(\"/tmp/model.lr\"))\n",
-    "sparkPipelineRf.serializeToBundle(new java.io.File(\"/tmp/model.rf\"))"
+    "val sbc = SparkBundleContext().withDataset(sparkPipelineLr.transform(datasetImputedFiltered))\n",
+    "for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.lr.zip\"))) {\n",
+    "        sparkPipelineLr.writeBundle.save(bf)(sbc).get\n",
+    "      }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "val sbcRf = SparkBundleContext().withDataset(sparkPipelineRf.transform(datasetImputedFiltered))\n",
+    "for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.rf.zip\"))) {\n",
+    "        sparkPipelineRf.writeBundle.save(bf)(sbcRf).get\n",
+    "      }\n"
    ]
   },
   {
@@ -599,28 +625,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import ml.combust.mleap.runtime.MleapContext.defaultContext\n",
-    "import ml.combust.mleap.runtime.MleapSupport._\n",
-    "import java.io.File"
+    "Note that you no longer need the spark context to run this step #10 as well as #11, meaning you can score data with the model trained in spark, but without any dependency on spark (context) it self."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "val (bundleLr, mleapTransformerLr) = new File(\"/tmp/model.lr\").deserializeBundle()\n",
-    "val (bundleRf, mleapTransformerRf) = new File(\"/tmp/model.rf\").deserializeBundle()"
+    "val mleapTransformerLr = (for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.lr.zip\"))) yield {\n",
+    "      bf.loadMleapBundle().get.root\n",
+    "    }).tried.get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "val mleapTransformerRf = (for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.rf.zip\"))) yield {\n",
+    "      bf.loadMleapBundle().get.root\n",
+    "    }).tried.get"
    ]
   },
   {
@@ -632,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -643,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -709,19 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "val bytes = s.getBytes(\"UTF-8\")\n",
-    "val frame = FrameReader(\"ml.combust.mleap.json\").fromBytes(bytes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -736,12 +758,16 @@
     }
    ],
    "source": [
-    "val frameLr = mleapTransformerLr.transform(frame).get.select(\"price_prediction\").get\n",
+    "val bytes = s.getBytes(\"UTF-8\")\n",
     "\n",
-    "val frameRf = mleapTransformerRf.transform(frame).get.select(\"price_prediction\").get\n",
-    "\n",
-    "println(\"Price LR: \" + frameLr.dataset(0).getDouble(0))\n",
-    "println(\"Price RF: \" + frameRf.dataset(0).getDouble(0))"
+    "for(frame <- FrameReader(\"ml.combust.mleap.json\").fromBytes(bytes);\n",
+    "    frameLr <- mleapTransformerLr.transform(frame);\n",
+    "    frameLrSelect <- frameLr.select(\"price_prediction\");\n",
+    "    frameRf <- mleapTransformerRf.transform(frame);\n",
+    "    frameRfSelect <- frameRf.select(\"price_prediction\")) {\n",
+    "      println(\"Price LR: \" + frameLrSelect.dataset(0).getDouble(0))\n",
+    "      println(\"Price RF: \" + frameRfSelect.dataset(0).getDouble(0))\n",
+    "}"
    ]
   },
   {
@@ -753,18 +779,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import ml.combust.mleap.spark.SparkSupport._"
+    "import ml.combust.mleap.spark.SparkSupport._\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -780,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -806,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -884,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -897,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -908,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -919,7 +945,7 @@
        "Array(bathrooms, bedrooms, security_deposit, cleaning_fee, extra_people, number_of_reviews, square_feet, review_scores_rating, room_type, host_is_superhost, cancellation_policy, instant_bookable, state, price, unscaled_continuous_features, scaled_continuous_features, room_type_index, host_is_superhost_index, cancellation_policy_index, instant_bookable_index, state_index, room_type_index_oh, host_is_superhost_index_oh, cancellation_policy_index_oh, instant_bookable_index_oh, state_index_oh, features_lr, features_rf, price_prediction)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -952,66 +978,14 @@
       "|     1.0|      1.0| 70.0|  70.7874939184863|\n",
       "|     1.0|      1.0|110.0|110.28303665012884|\n",
       "|     2.0|      1.0| 91.0|125.17538136820143|\n",
-      "|     2.0|      2.5|191.0| 195.7376696834006|\n",
-      "|     1.0|      1.0| 60.0| 56.51900070930371|\n",
-      "|     2.0|      1.0|121.0|138.67427126803813|\n",
-      "|     1.0|      1.0| 95.0| 67.09722862496797|\n",
-      "|     1.0|      1.0|121.0| 59.57536239927363|\n",
-      "|     4.0|      3.0|200.0| 337.1290963662759|\n",
-      "|     3.0|      2.0|395.0| 191.2954710692169|\n",
-      "|     1.0|      1.0| 80.0| 81.06174451139658|\n",
-      "|     1.0|      1.0| 66.0|48.035037374517216|\n",
-      "|     1.0|      1.5| 85.0| 75.72094360953041|\n",
       "+--------+---------+-----+------------------+\n",
-      "only showing top 20 rows\n",
+      "only showing top 10 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "sparkDataframe.select(\"bedrooms\", \"bathrooms\", \"price\", \"price_prediction\").show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 10: Load the libaries for .deploy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name: Compile Error\n",
-       "Message: <console>:25: error: object client is not a member of package ml.combust\n",
-       "       import ml.combust.client.spark.SparkSupport._\n",
-       "                         ^\n",
-       "StackTrace: "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import ml.combust.bundle.BundleRegistry\n",
-    "import ml.combust.mleap.spark.SparkSupport._\n",
-    "import ml.combust.client.spark.SparkSupport._\n",
-    "import ml.combust.client.model.MultiModelClient\n",
-    "import akka.actor.ActorSystem\n",
-    "import akka.stream.ActorMaterializer\n",
-    "import scala.concurrent.duration._\n",
-    "import scala.concurrent.Await\n",
-    "\n",
-    "implicit val hr = BundleRegistry(\"spark\")"
+    "sparkDataframe.select(\"bedrooms\", \"bathrooms\", \"price\", \"price_prediction\").show(10)"
    ]
   },
   {
@@ -1023,22 +997,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "implicit val system = ActorSystem(\"combust-client\")\n",
-    "implicit val materializer = ActorMaterializer()\n",
-    "implicit val ec = system.dispatcher"
+    "implicit val materializer = ActorMaterializer()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 12: Define model servers to send your models to"
+    "### Step 12: Define model servers to send your models to and .deploy()"
    ]
   },
   {
@@ -1052,90 +1025,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LoadModelResponse(ResourceAlias(ResourceKey(my_username,my_model_rf,models),Some(Resource(4f3b9a5c-93f7-47d4-ab3d-e1e1d646d529,models))))"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "val lrHost = \"\"\n",
-    "val lrPort = 8891\n",
     "\n",
-    "val rfHost = \"\"\n",
-    "val rfPort = 8890\n",
+    "// {\n",
+    "//     implicit val context = sbc\n",
+    "//     Await.result(sparkPipelineLr.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"my_model_lr\", token), 10.seconds)\n",
+    "// }\n",
+    "// {\n",
+    "//     implicit val context = sbcRf\n",
+    "//     Await.result(sparkPipelineRf.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"my_model_rf\", token), 10.seconds)\n",
+    "// }\n",
     "\n",
-    "val client = MultiModelClient.builder[String]().\n",
-    "  withServer(\"model-server-1\", s\"$lrHost:$lrPort\").\n",
-    "  withServer(\"model-server-2\", s\"$rfHost:$rfPort\").\n",
-    "  build()"
+    "\n",
+    "{\n",
+    "    implicit val context = sbc\n",
+    "    Await.result(sparkPipelineLr.deploy(\"http://localhost:65327\", \"my_username\", \"my_model_lr\"), 10.seconds)\n",
+    "}\n",
+    "{\n",
+    "    implicit val context = sbcRf\n",
+    "    Await.result(sparkPipelineRf.deploy(\"http://localhost:65327\", \"my_username\", \"my_model_rf\"), 10.seconds)\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 13: Deploy your LR and RF pipelines to the model servers"
+    "### Combust Cloud Client API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "Await.result(client.deploy(sparkPipelineLr, \"airbnb_lr\").sequence, 10.seconds)"
+    "import ml.combust.model.core.domain.v1._\n",
+    "import scala.concurrent.duration._\n",
+    "import scala.concurrent.Await\n",
+    "import ml.combust.mleap.runtime.serialization.FrameReader\n",
+    "val client = ml.combust.model.client.Client(\"http://localhost:65327\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DefaultLeapFrame(StructType(List(StructField(state,StringType(false)), StructField(bathrooms,DoubleType(false)), StructField(square_feet,DoubleType(false)), StructField(bedrooms,DoubleType(false)), StructField(security_deposit,DoubleType(false)), StructField(cleaning_fee,DoubleType(false)), StructField(extra_people,DoubleType(false)), StructField(number_of_reviews,DoubleType(false)), StructField(review_scores_rating,DoubleType(false)), StructField(room_type,StringType(false)), StructField(host_is_superhost,StringType(false)), StructField(cancellation_policy,StringType(false)), StructField(instant_bookable,StringType(false)), StructField(unscaled_continuous_features,TensorType(DoubleType(false),false)), StructField(scaled_continuous_fea..."
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Await.result(client.deploy(sparkPipelineRf, \"airbnb_rf\").sequence, 10.seconds)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 14 (Optional): Undeploy your models from the model server"
+    "val s = scala.io.Source.fromURL(\"https://s3-us-west-2.amazonaws.com/mleap-demo/frame.json\").mkString\n",
+    "val bytes = s.getBytes(\"UTF-8\")\n",
+    "\n",
+    "var leapFrame = FrameReader(\"ml.combust.mleap.json\").fromBytes(bytes).get\n",
+    "val result = Await.result(client.transform(TransformRequest().withUsername(\"my_username\").withModelId(\"my_model_lr\").withFrame(leapFrame)), 10.seconds)\n",
+    "val leapFrameFromServer = result.frame\n",
+    "leapFrameFromServer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232.62463916675608"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Await.result(client.undeploy(\"airbnb_rf\").sequence, 10.seconds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Await.result(client.undeploy(\"airbnb_lr\").sequence, 10.seconds)"
+    "leapFrameFromServer.select(\"price_prediction\").get.dataset(0).getDouble(0)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - Scala",
+   "display_name": "Apache Toree - Scala2",
    "language": "scala",
    "name": "apache_toree_scala"
   },
   "language_info": {
+   "file_extension": ".scala",
    "name": "scala",
    "version": "2.11.8"
   }
