adding a logistic regression step and updating path of .avro file

--- a/notebooks/PySpark - AirBnb.ipynb
+++ b/notebooks/PySpark - AirBnb.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset used for the demo was pulled together from individual cities' data found [here](http://insideairbnb.com/get-the-data.html). We've also gone ahead and pulled the individual datasets and relevant features into this [research dataset](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro.zip) stored as avro."
+    "The dataset used for the demo was pulled together from individual cities' data found [here](http://insideairbnb.com/get-the-data.html). We've also gone ahead and pulled the individual datasets and relevant features into this [research dataset](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro) stored as avro."
    ]
   },
   {
@@ -53,14 +53,14 @@
    "outputs": [],
    "source": [
     "#import mleap.pyspark.feature\n",
-    "import mleap.pyspark\n",
+    "from mleap import pyspark\n",
     "\n",
     "from pyspark.ml.linalg import Vectors\n",
-    "\n",
     "from mleap.pyspark.spark_support import SimpleSparkSerializer\n",
     "from pyspark.ml.feature import VectorAssembler, StandardScaler, OneHotEncoder, StringIndexer\n",
     "from pyspark.ml import Pipeline, PipelineModel\n",
-    "from pyspark.ml.regression import LinearRegression"
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.classification import LogisticRegression"
    ]
   },
   {
@@ -172,7 +172,11 @@
     "            when (square_feet is null or square_feet <=100) and (bedrooms is null or bedrooms = 0)\n",
     "            then 350.0\n",
     "            else 380 * bedrooms\n",
-    "        end as square_feet\n",
+    "        end as square_feet,\n",
+    "        case when bathrooms >= 2\n",
+    "            then 1.0\n",
+    "            else 0.0\n",
+    "        end as n_bathrooms_more_than_two\n",
     "    from df\n",
     "    where bedrooms is not null\n",
     "\"\"\")\n",
@@ -481,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 8: Serialize the model to Bundle.ML"
+    "### Step 7.5: Train a Logistic Regression Model"
    ]
   },
   {
@@ -490,9 +494,46 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete: Training Logistic Regression\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 3.2 Create our linear regression model\n",
+    "\n",
+    "logisticRegression = LogisticRegression(featuresCol=\"scaled_continuous_features\", labelCol=\"n_bathrooms_more_than_two\", predictionCol=\"n_bathrooms_more_than_two_prediction\", maxIter=10)\n",
+    "\n",
+    "pipeline_log_r = [sparkFeaturePipelineModel] + [logisticRegression]\n",
+    "\n",
+    "sparkPipelineEstimatorLogr = Pipeline(stages = pipeline_log_r)\n",
+    "\n",
+    "sparkPipelineLogr = sparkPipelineEstimatorLogr.fit(dataset_imputed)\n",
+    "\n",
+    "print(\"Complete: Training Logistic Regression\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 8: Serialize the model to Bundle.ML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "sparkPipelineLr.serializeToBundle(\"jar:file:/tmp/pyspark.lr.zip\", sparkPipelineLr.transform(dataset_imputed))"
+    "sparkPipelineLr.serializeToBundle(\"jar:file:/tmp/pyspark.lr.zip\", sparkPipelineLr.transform(dataset_imputed))\n",
+    "sparkPipelineLogr.serializeToBundle(\"jar:file:/tmp/pyspark.logr.zip\", dataset=sparkPipelineLogr.transform(dataset_imputed))"
    ]
   },
   {
@@ -506,7 +547,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
