updating dataset locations (avro and csv)

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For now, we've made it so that you have to download the [data](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro) from s3. We suggest that you unzip it in your /tmp directory."
+    "For now, we've made it so that you have to download the [data](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro) from s3."
    ]
   },
   {
